[workspace]
members = ["macros"]

[workspace.package]
version = "0.1.0"
authors = ["DJ_Laser"]
edition = "2024"
license = "MIT"

[package]
name = "qrrust"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "qrrust"
path = "src/main.rs"
crate-type = ["rlib"]

[[bin]]
name = "qrrust-bloated"
path = "src/main.rs"

[dependencies]
macros = { path = "./macros" }

[profile.dev]
opt-level = "z"     # Optimize for size.
panic = "abort"     # Abort on panic

[profile.release]
opt-level = "z"     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
incremental = false # Disable incremental compilation
